--- a/style/gallery.css
+++ b/style/gallery.css
@@ -76,6 +76,7 @@
 /* gallery_start*/
 
 .section--gallery{
+    min-height: 800px;
 }
 
 .container--gallery{
@@ -133,14 +134,33 @@
     justify-content: center;
     width: 100%;
     margin-top: 5px;
-    background-color:#000;
+    align-self: center;
+    position: relative;
+    background-color: black;
 }
 
-.gallery-card img{
+.card-content {
+}
+
+.redirect-image {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+
+    display: block;
+    margin: auto;
+}
+
+.gallery-image{
     width: 100%;
+    align-self: center;
 }
 
-.gallery-card img:hover {
+.gallery-image:hover {
     opacity:0.3;
 }
 
