--- a/style/gallery.css
+++ b/style/gallery.css
@@ -93,7 +93,6 @@
     display: flex;
     flex-direction: column;
     width: 30%;
-    justify-content: space-between;
 }
 
 .gallery__titles {
@@ -130,29 +129,17 @@
 }
 
 .gallery-card {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin-top: 5px;
+    margin-top: 15px;
+    background-color: black;
     align-self: center;
     position: relative;
-    background-color: black;
 }
 
 .card-content {
-}
-
-.redirect-image {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-
-    display: block;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: relative;
 }
 
 .gallery-image{
@@ -160,8 +147,31 @@
     align-self: center;
 }
 
-.gallery-image:hover {
-    opacity:0.3;
+.card-content:hover {
+    opacity:0.65;
+}
+
+.redirections {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 120px;
+    height: 50px;
+
+    display: none;
+    margin: auto;
+}
+
+.redirect-image{
+    width: 50px;
+    height: 50px;
+    margin: auto;
+}
+
+.gallery-card:hover .redirections {
+    display: flex;
 }
 
 /* gallery_end*/
