--- a/style/gallery.css
+++ b/style/gallery.css
@@ -110,7 +110,7 @@
     color: white;
     border-top: 2px solid transparent;
     border-bottom: 2px solid transparent;
-    padding-top: 5px;
+    font-family: "Times New Roman", Times, serif;
 }
 
 .gallery-title:hover{
