--- a/style/gallery.css
+++ b/style/gallery.css
@@ -76,7 +76,8 @@
 /* gallery_start*/
 
 .section--gallery{
-    min-height: 800px;
+    min-height: 1000px;
+    background-image: linear-gradient(#0c3865,#800ead 800px, #700759 2000px);
 }
 
 .container--gallery{
