--- a/style/index.css
+++ b/style/index.css
@@ -101,6 +101,7 @@
     justify-content: center;
     align-items: center;
     color: white;
+    position: relative;
 }
 
 .social-links{
@@ -120,6 +121,13 @@
     margin-bottom: 10px;
 }
 
+.back-to-top-button{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 25px;
+    cursor: pointer;
+}
 
 /* footer_end */
 
