--- a/WebFinalApp/WebFinalApp/wwwroot/style/gallery.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/gallery.css
@@ -1,7 +1,65 @@
 
-/* gallery_start*/
+/* gallery_filter_start */
 
-.section--gallery{
+.gallery_filter {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-top: 30px;
+}
+
+.filter_input {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+}
+
+#tag_input_text {
+    border-radius: 10px;
+    padding-left: 7px;
+    width: 80%;
+    height: 35px;
+}
+
+input:focus {
+    outline: none;
+}
+
+#tag_input_button {
+    width: 15%;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.filter_tags {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    padding: 15px 0px;
+    flex-wrap: wrap;
+}
+
+.filter_tag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    color: white;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin: 0px 5px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+/* gallery_filter_end */
+
+
+/* gallery_start*/
+.section--gallery {
     min-height: 1000px;
     background-image: linear-gradient(#0c3865,#800ead 800px, #700759 2000px);
     padding-bottom: 30px;
