Adds redirect button in index scroller

--- a/WebFinalApp/WebFinalApp/wwwroot/style/index.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/index.css
@@ -46,6 +46,19 @@
     width: 40%;
 }
 
+#find_out_more {
+    z-index: 100;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    opacity: 0.8;
+    border-radius: 10px;
+    cursor: pointer;
+    bottom: 30px;
+    position: absolute;
+    margin-left: 250px;
+}
+
 /* scroller_end */
 
 
@@ -119,20 +132,23 @@
     pointer-events: none;
 }
 
-.new-blog-title{
+.new-blog-title {
     display: flex;
     height: 40px;
     width: 100%;
     background-color: #151515;
-    align-items: center;
-    justify-content: center;
     text-align: center;
     color: white;
     position: absolute;
     bottom: 0px;
     transition: 0.5s;
+    text-decoration: none;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    -webkit-box-pack: center;
 }
 
 .item--new-blog:hover .new-blog-title {
