--- a/WebFinalApp/WebFinalApp/wwwroot/style/gallery.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/gallery.css
@@ -129,15 +129,12 @@ input:focus {
     justify-content: center;
     width: 100%;
     position: relative;
+    transition: 0.2s ease-out 2s;
 }
 
 .gallery-image{
     width: 100%;
     align-self: center;
-}
-
-.card-content:hover {
-    opacity:0.65;
 }
 
 .redirections {
@@ -149,8 +146,10 @@ input:focus {
     width: 120px;
     height: 50px;
 
-    display: none;
+    display: flex;
     margin: auto;
+    transition: 0.2s ease-out 2s;
+    z-index: -100;
 }
 
 .redirect-image{
@@ -159,8 +158,24 @@ input:focus {
     margin: auto;
 }
 
-.gallery-card:hover .redirections {
-    display: flex;
+.card-content:hover {
+    opacity: 0.65;
+    transition: 0s ease-in-out 0s;
+}
+
+.card-content:hover .redirections {
+    z-index: 1;
+    transition: 0s ease-in-out 0s;
+}
+
+.card-content:active {
+    opacity: 0.65;
+    transition: 0s ease-in-out 0s;
+}
+
+.card-content:active .redirections {
+    z-index: 1;
+    transition: 0s ease-in-out 0s;
 }
 
 /* gallery_end*/
