--- a/WebFinalApp/WebFinalApp/wwwroot/style/shared.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/shared.css
@@ -49,7 +49,8 @@
 
 .navbar__items__menu {
     display: flex;
-    width: 50%;
+    justify-content: space-between;
+    width: 55%;
 }
 
 .item--navbar--button {
@@ -57,18 +58,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 25%;
+    width: 20%;
     color: white;
     font-weight: 700;
     font-size: large;
     transition: 0.1s;
 }
 
-    .item--navbar--button:hover {
-        border-top: 2px solid white;
-        border-bottom: 2px solid white;
-        cursor: pointer;
-    }
+.item--navbar--button:hover {
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    cursor: pointer;
+}
 
 /* Navbar_end */
 
