--- a/WebFinalApp/WebFinalApp/wwwroot/style/shared.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/shared.css
@@ -92,14 +92,21 @@
 
 .social-links {
     display: flex;
+    width: 70%;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.soc_link {
+    width: 100%;
+    max-height: 40px;
+    max-width: 40px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .social-button {
-    width: 40px;
-    height: 40px;
-    margin-top: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 100%;
 }
 
 .copyright-text {
