Even more responsiveness

--- a/WebFinalApp/WebFinalApp/wwwroot/style/about.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/about.css
@@ -50,7 +50,7 @@ h1 {
 
 .subsection_body {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .content_text {
