--- a/WebFinalApp/WebFinalApp/wwwroot/style/article.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/article.css
@@ -42,16 +42,17 @@ h1{
     background: linear-gradient(to bottom, #f5f5f5, #f5f5f5 125px, white 125px);
 }
 
-.article-items{
+.article-items {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 
-img{
+img {
     max-height: 400px;
     align-items: center;
+    width: 90%;
 }
 
 .main-image{
@@ -61,9 +62,10 @@ img{
     margin-bottom: 20px;
 }
 
-.article-content{
+.article-content {
     font-family: "Times New Roman", Times, serif;
     font-size: large;
+    width: 90%;
 }
 
 /* article_end */
