--- a/WebFinalApp/WebFinalApp/wwwroot/style/shared_responsive.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/shared_responsive.css
@@ -4,6 +4,31 @@
         width: 100%;
     }
 
+    .burger_wrapper {
+        display: flex;
+    }
+
+    .navbar__items__menu {
+        position: absolute;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        left: 100%;
+        top: 0px;
+        background-color: black;
+        justify-content: space-evenly;
+        z-index: 999;
+        transition: 0.5s;
+    }
+
+    .navbar__items__menu_hide {
+        display: none;
+    }
+
+    .item--navbar--button {
+        width: 50%;
+        height: 10%;
+    }
 }
 
 @media all and (max-width: 480px) {
