--- a/WebFinalApp/WebFinalApp/wwwroot/style/index.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/index.css
@@ -65,6 +65,14 @@
 
 /* scroll-header_start */
 
+.redirect-image {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    z-index: 10;
+    margin-left: 5px;
+}
+
 .section--scroll-header{
     background-color: #e8e7e5;
     padding-top: 20px;
@@ -96,7 +104,7 @@
     position: absolute;
     align-items: center;
     justify-content: center;
-
+    text-decoration: none;
 }
 
 /* scroll-header_end */
@@ -163,72 +171,19 @@
 /* new_tweets_start */
 
 .twitter-tweet {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
-    font-size: 12px;
-    font-weight: bold;
-    line-height: 16px;
-    border-color: #eee #ddd #bbb;
-    border-radius: 5px;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-    margin: 10px 5px;
-    padding: 16px;
-    background-color: white;
-    position: relative;
-    overflow: hidden;
-    min-width: 400px;
-    min-height: 233px;
-}
-  
-.twitter-tweet p {
-    font-size: 16px;
-    font-weight: normal;
-    line-height: 20px;
-}
-  
-.twitter-tweet a {
-    color: inherit;
-    font-weight: normal;
-    text-decoration: none;
-    outline: 0 none;
-}
-  
-.twitter-tweet a:hover,
-.twitter-tweet a:focus {
-    text-decoration: underline;
+    margin: 0px 15px;
 }
 
-.tweet-body {
-    display: flex;
-    flex-direction: column;
-}
-
-.twitter-tweet .tweet-link{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+.twitter-tweet > * {
     pointer-events: none;
 }
 
-.tweet-user .user-image{
-    width: 46px;
-    height: 46px;
-    border-radius: 9999px;
+.twitter-tweet > a {
+    pointer-events: auto;
+}
+
+article {
     pointer-events: none;
-}
-
-.tweet-user {
-    display: flex;
-}
-
-.tweet-user-id {
-    padding-left: 10px;
 }
 
 /* new_tweets_end */
