--- a/WebFinalApp/WebFinalApp/wwwroot/style/index.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/index.css
@@ -49,7 +49,7 @@
 #find_out_more {
     z-index: 100;
     padding: 10px 20px;
-    background-color: black;
+    background-color: grey;
     color: white;
     opacity: 0.8;
     border-radius: 10px;
