--- a/WebFinalApp/WebFinalApp/wwwroot/style/blogs_responsive.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/blogs_responsive.css
@@ -1,6 +1,9 @@
 ﻿@media all and (max-width: 960px) {
 
-    .main-article__items{
+    .header-wrap {
+        display: none;
+    }
+    .main-article__items {
         display: none;
     }
 }
