--- a/WebFinalApp/WebFinalApp/wwwroot/style/blogs.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/blogs.css
@@ -25,12 +25,17 @@
     width: 256px;
     height: 48px;
     border-radius: 11px;
-    background-color: black;
+    background-color: #0c3865;
     color: white;
     position: absolute;
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    border-style: solid;
+    border-width: 0px;
+    border-left-width: 3px;
+    border-right-width: 3px;
+    border-color: black;
 }
 
 /* header_end */
