--- a/WebFinalApp/WebFinalApp/wwwroot/style/index.css
+++ b/WebFinalApp/WebFinalApp/wwwroot/style/index.css
@@ -57,7 +57,7 @@
     bottom: 10px;
     position: absolute;
     margin: auto;
-    font-size: 1.5vw;
+    font-size: 20px;
 }
 
 /* scroller_end */
@@ -158,6 +158,10 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     -webkit-box-pack: center;
+}
+
+.blog_title_text{
+    width: 98%;
 }
 
 .item--new-blog:hover .new-blog-title {
